--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
   "name": "kurly-ars",
-  "version": "0.0.0",
-  "author": "no one",
+  "version": "1.0.0",
+  "author": "taeuk_kang",
   "description": "",
   "type": "module",
   "license": "MIT",
-  "keywords": [
-    "chrome-extension",
-    "lit",
-    "lit-element",
-    "vite",
-    "create-chrome-ext"
-  ],
   "engines": {
     "node": ">=14.18.0"
   },
@@ -21,11 +14,16 @@
     "fmt": "prettier --write '**/*.{ts,json,css,scss,md}'"
   },
   "dependencies": {
-    "lit": "^2.2.6"
+    "daisyui": "^2.24.0",
+    "lit": "^2.2.6",
+    "winbox": "^0.2.5"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.12",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^2.9.13"
   }
